# shuttle-cch2024

./: Cargo.toml  LICENSE  README.md
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
.sqlx/: query-4ab0cfd39b3dbde48e0d1ad07302e0241f8967619bbaf4d0fa342db43c0b0e4c.json  query-4e0006d41a91345a586d67a02266495e56ef636540b109f3b6e72da18e9853d5.json  query-5cd12660a0d262f8ff2ae9cf50b00433972e9f4b6adc54c831a9f2eebb32e817.json  query-9593e977ed584c67802620462b3a1386f2a992f5f6fdec75aad1b6fe74b5d2a5.json  query-9d939765dbb86c1d85a2eceb0c053bfd3d61a70732e80dab9daf8ca9298552cc.json  query-9ddfff8ca67d5c736609166589a11ac777ade887b451d1928fa86fd7f7b39739.json  query-aa85e5321f177323f64b90e9d7d2260f9549a3ae31818a58a1b6b68ebef2d1c1.json  query-b0c4505a0e16eb591480b09ffdf7ea855ef6918b1bc38c84d5448111dbd37407.json  query-c9c2110cfbef5a2d889ba26babf996851539fbfe0e51b6ec873014fa3375d491.json  query-f5330e6557754970c078080cb46a4ece28a69236f71657075563241b3ff90ba8.json  query-f5e26f8abae653dfeb0b6bf50854a14c4e0b81086f096dcec08b8697cfd6334c.json  query-fbff970adf17c5d203e66692747bb5893bc4a18bd69f45935ecea21368fd7aaa.json
migrations/: 20250112130653_quotes.sql  20250116180138_cursors.sql
src/: day0.rs  day12.rs  day16.rs  day19.rs  day2.rs  day23.rs  day5.rs  day9.rs  main.rs
src/day12/: game.rs
src/fixtures/: quotes_3.sql  quotes_4.sql
templates/: cake.html  ornament.html  present.html  star.html
