[package]
name = "shuttle-cch2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.7.4"
cargo-manifest = "0.17.0"
leaky-bucket = "1.1.2"
rand = "0.8.5"
serde = "1.0.216"
serde-transcode = "1.1.1"
serde_json = "1.0.134"
serde_yaml = "0.9.34"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
thiserror = "2.0.9"
tokio = "1.28.2"
toml = "0.8.19"
tracing = "0.1.41"
