[package]
name = "shuttle-cch2024"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
anyhow = "1.0.95"
axum-macros = "0.5.0"
axum-embed = "0.1.0"
axum-extra = { version = "0.9.6", features = ["cookie"] }
cargo-manifest = "0.17.0"
chrono = { version = "0.4.39", features = ["serde"] }
http-body-util = "0.1.2"
jsonwebtoken = "9.3.0"
leaky-bucket = "1.1.2"
mime = "0.3.17"
rand = "0.8.5"
rinja = { version = "0.3.5", features = ["with-axum"] }
rinja_axum = "0.3.5"
rust-embed = "8.5.0"
serde = "1.0.216"
serde-transcode = "1.1.1"
serde_json = "1.0.134"
serde_yaml = "0.9.34"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8", features = [
    "chrono",
    "runtime-tokio",
    "tls-rustls-ring-webpki",
    "uuid",
] }
thiserror = "2.0.9"
tokio = "1.28.2"
toml = "0.8.19"
tower = "0.5.2"
tracing = "0.1.41"
uuid = { version = "1.11.1", features = ["v4", "serde"] }
hex = "0.4.3"
